# monitor

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  clocks.cc  configure.ac  fatal.cc  monitor.1  monitor.c  monitor.cc  monitor.h
debian/: .gitignore  changelog  control
scripts/travis/osx/clang/: configure
